src/test/resources/typeSystemTestModels/invalid/expressions/PrimarySuper.java
package typeSystemTestModels.invalid.expressions;

public interface PrimarySuper extends SuperClass{

  int m = super.aa;

  public class Object {
    int n = super.aa;

  }


}
